tests/snapshots/test_runner__tests__compiler__typecheck__enum_4.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
enum Foo = Bar(String)

let a = Bar

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/enum_4.kk:3:9
  │
3 │ let a = Bar
  │         ^^^ Missing Payload
  │
  = This enum constructor requires a payload with the type of:

        String
